force-app/main/default/objects/Export__c/Export__c.object-meta.xml
<CustomObject>
    <label>Export</label>
    <nameField>
        <label>Export Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>