force-app/main/default/objects/Export__c/fields/All_Data__c.field-meta.xml
<CustomField>
    <fullName>All_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Data</label>
    <type>Checkbox</type>
</CustomField>