force-app/main/default/objects/Export__c/fields/Callout_Message__c.field-meta.xml
<CustomField>
    <fullName>Callout_Message__c</fullName>
    <label>Callout Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>