force-app/main/default/objects/Export__c/fields/Data_Extension__c.field-meta.xml
<CustomField>
    <fullName>Data_Extension__c</fullName>
    <label>Data Extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>