force-app/main/default/objects/Export__c/fields/Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Proyecto__c</fullName>
    <label>Proyecto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>