force-app/main/default/objects/Export__c/fields/ReportId__c.field-meta.xml
<CustomField>
    <fullName>ReportId__c</fullName>
    <label>ReportId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>