force-app/main/default/objects/Export__c/fields/SAQL__c.field-meta.xml
<CustomField>
    <fullName>SAQL__c</fullName>
    <label>SAQL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>