force-app/main/default/objects/Export__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente de aprobación</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>En espera de ejecución</fullName>
            </value>
            <value>
                <fullName>En ejecución</fullName>
            </value>
            <value>
                <fullName>Finalizado OK</fullName>
            </value>
            <value>
                <fullName>Finalizado con errores</fullName>
            </value>
            <value>
                <fullName>Pendiente de aprobación {Sin cantidad de registros)</fullName>
                <color>#FFFF66</color>
                <label>Pendiente de aprobación {Sin cantidad de registros)</label>
            </value>
            <value>
                <fullName>Error en SAQL</fullName>
            </value>
            <value>
                <fullName>Detener</fullName>
            </value>
            <value>
                <fullName>Detenido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>