force-app/main/default/objects/Export__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <label>Survey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>