force-app/main/default/objects/Export__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Record_Count__c</columns>
    <columns>Data_Extension__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>SAQL__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>All_Data__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>