force-app/main/default/objects/Export__c/listViews/EAaCSV.listView-meta.xml
<ListView>
    <fullName>EAaCSV</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Record_Count__c</columns>
    <columns>SAQL__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>eacsv</value>
    </filters>
    <label>EAaCSV</label>
</ListView>