force-app/main/default/objects/Export__c/listViews/Export_Approvers_Export.listView-meta.xml
<ListView>
    <fullName>Export_Approvers_Export</fullName>
    <filterScope>Queue</filterScope>
    <label>Export Approvers</label>
    <queue>Export_Approvers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>