force-app/main/default/objects/Export__c/listViews/Export_Manager_Export.listView-meta.xml
<ListView>
    <fullName>Export_Manager_Export</fullName>
    <filterScope>Queue</filterScope>
    <label>Export Manager</label>
    <queue>Export_Manager</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>